# industrial_robot_core

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  requirements-dev.txt  requirements.txt
.github/workflows/: cmake.yml
cmake/: robot_motion_coreConfig.cmake.in
examples/: demo.py  main.cpp  ur5_demo.py
examples/consumer_cmake/: CMakeLists.txt  main.cpp
include/: robot_arm.hpp
include/robot/: ik_solver_dls.hpp  ik_types.hpp
src/: ik_solver_dls.cpp  python_bindings.cpp  robot_arm.cpp
tests/: benchmark_ik.cpp  test_fk.cpp  test_ik_irb120.cpp  test_ik_joint_limits.cpp  test_ik_near_singular.cpp  test_ik_ur5.cpp  test_jacobian_fd.cpp
tools/: ci_smoke.sh
